commented, fixed warnings